--- a/usr/local/zevenet/share/zlb-start.template
+++ b/usr/local/zevenet/share/zlb-start.template
@@ -1,4 +1,3 @@
 #make your own script in your favorite language, it will be called
-#at the end of the procedure /etc/init.d/zenloadbalacer stop
+#at the end of the procedure /etc/init.d/zevenet start
 #and replicated to the other node if zen cluster is running.
-
