--- a/usr/local/zevenet/share/zlb-stop.template
+++ b/usr/local/zevenet/share/zlb-stop.template
@@ -1,3 +1,3 @@
 #make your own script in your favorite language, it will be called
-#at the end of the procedure /etc/init.d/zenloadbalacer start
+#at the end of the procedure /etc/init.d/zevenet stop
 #and replicated to the other node if zen cluster is running.
