--- a/usr/local/zevenet/share/farmguardian.template
+++ b/usr/local/zevenet/share/farmguardian.template
@@ -106,6 +106,15 @@ interval=15
 cut_conns=true
 template=true
 
+[check_redis]
+description=Check the master Role for redis server, if master role is not present then the backend will be marked in DOWN status
+command=check_redis -h HOST -p PORT
+farms=
+log=false
+interval=15
+cut_conns=true
+template=true
+
 [check_common]
 description=Check the folder /usr/local/zevenet/libexec, which includes more checks, get more info about the health check with <command> --help.
 command=
@@ -113,4 +122,13 @@ farms=
 log=false
 interval=15
 cut_conns=false
+template=true
+
+[check_sip]
+description=This check will test a SIP server/device for availability and response time.
+command=check_sip --username <name> --password <pass> -R HOST:PORT
+farms=
+log=false
+interval=15
+cut_conns=true
 template=true
