--- a/usr/local/zevenet/share/proxytpl.cfg
+++ b/usr/local/zevenet/share/proxytpl.cfg
@@ -2,6 +2,7 @@
 ##GLOBAL OPTIONS
 User		"root"
 Group		"root"
+Name		[DESC]
 ## allow PUT and DELETE also (by default only GET, POST and HEAD)?:
 #ExtendedHTTP	0
 ## Logging: (goes to syslog by default)
@@ -11,17 +12,19 @@ Group		"root"
 ##	3	Apache-style (common log format)
 #LogFacility	local5
 LogLevel 	0
-Daemon		1
 ## check timeouts:
 Timeout		45
 ConnTO		20
 Alive		10
 Client		30
-Control 	"/tmp/[DESC]_pound.socket"
+ThreadModel	dynamic
+Control 	"/tmp/[DESC]_proxy.socket"
+#DHParams 	"/usr/local/zevenet/app/zhttp/etc/dh2048.pem"
+##ECDHCurve 	"prime256v1"
 
 
 #HTTP(S) LISTENERS
-ListenHTTP
+ListenHTTP 
 	Err414 "[CONFIGDIR]/[DESC]_Err414.html"
 	Err500 "[CONFIGDIR]/[DESC]_Err500.html"
 	Err501 "[CONFIGDIR]/[DESC]_Err501.html"
@@ -47,6 +50,7 @@ ListenHTTP
 		#HeadRequire "Host: "
 		#Url ""
 		#Redirect ""
+		#StrictTransportSecurity 21600000
 		#Session
 			#Type nothing
 			#TTL 120
