[Improvement] Farmguardian: Added an UDP check using nc
Signed-off-by: dev-team-skudonet <community@skudonet.com>

	modificado:     usr/local/skudonet/share/farmguardian.template

--- a/usr/local/skudonet/share/farmguardian.template
+++ b/usr/local/skudonet/share/farmguardian.template
@@ -132,3 +132,12 @@ log=false
 interval=15
 cut_conns=true
 template=true
+
+[check_udp_nc]
+description=Send UDP connection to Backend and check if port is open.
+command=nc -vz -w 1 -u HOST PORT
+farms=
+log=false
+interval=15
+cut_conns=true
+template=true
