[Improvement] LSLB: Disable SSLv2 and TLSv1 by default in HTTPS Farms
Signed-off-by: dev-team-skudonet <community@skudonet.com>

	modified:   usr/local/skudonet/share/poundtpl.cfg

--- a/usr/local/skudonet/share/poundtpl.cfg
+++ b/usr/local/skudonet/share/poundtpl.cfg
@@ -37,6 +37,8 @@ ListenHTTP
 	#Cert "/usr/local/skudonet/config/certificates/skdcert.pem"
 	#Ciphers "ALL"
 	#Disable SSLv3
+	#Disable SSLv2
+	#Disable TLSv1
 	#SSLHonorCipherOrder 1
 	#ZWACL-INI
 
