[New Feature] Add IPDS WAF
Now SKUDONET Open Source Loadbalancer supports WAF using Modsecurity Library

Signed-off-by: dev-team-skudonet <community@skudonet.com>

	modified:   DEBIAN/control
	modified:   usr/local/skudonet/bin/skudonet
	modified:   usr/local/skudonet/share/global.conf.template
	new file:   usr/local/skudonet/zapi-model/v4.0/json/waf-action.json
	new file:   usr/local/skudonet/zapi-model/v4.0/json/waf-modify.json
	new file:   usr/local/skudonet/zapi-model/v4.0/json/waf-move.json
	new file:   usr/local/skudonet/zapi-model/v4.0/json/waf_file-create.json
	new file:   usr/local/skudonet/zapi-model/v4.0/json/waf_to_farm-add.json
	modified:   usr/share/perl5/Skudonet/API40/Farm/Get/HTTP.pm
	new file:   usr/share/perl5/Skudonet/API40/IPDS/Generic.pm
	new file:   usr/share/perl5/Skudonet/API40/IPDS/WAF/Files.pm
	new file:   usr/share/perl5/Skudonet/API40/IPDS/WAF/Sets.pm
	modified:   usr/share/perl5/Skudonet/API40/Routes.pm
	new file:   usr/share/perl5/Skudonet/IPDS/WAF/Config.pm
	new file:   usr/share/perl5/Skudonet/IPDS/WAF/Core.pm
	new file:   usr/share/perl5/Skudonet/IPDS/WAF/File.pm
	new file:   usr/share/perl5/Skudonet/IPDS/WAF/Parser.pm
	new file:   usr/share/perl5/Skudonet/IPDS/WAF/Runtime.pm
	new file:   usr/share/perl5/Skudonet/IPDS/WAF/Setup.pm
	modified:   usr/share/perl5/Skudonet/LetsencryptZ.pm
	modified:   usr/share/perl5/Skudonet/Validate.pm

--- a/usr/local/skudonet/share/global.conf.template
+++ b/usr/local/skudonet/share/global.conf.template
@@ -384,6 +384,7 @@ $proxytpl="$templatedir/poundtpl.cfg";#update
 #maximum value of http body to pass to modsecurity
 $waf_max_body="32000";
 #Where is modsec rules check
+$waf_rule_check_bin="/usr/bin/modsec-rules-check";
 #time to ensure that the farm has been stopped completaly
 $http_farm_stop_grace_time="2";
 
@@ -517,6 +518,8 @@ $bonding_hwaddr_filename="bonding_slave/perm_hwaddr";#update
 # How time wait to execute the logs rotate
 
 #IPDS Module
+$wafConfDir="$configdir/ipds/waf";#update
+$wafSetDir="$wafConfDir/sets";#update
 
 #WAF Assistant
 
